golang_service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golang-app
  template:
    metadata:
      labels:
        app: golang-app
    spec:
      containers:
        - name: golang-deployment
          image: jedich/golang-mservice
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
